<resources>
    <string name="app_name">Moski M.R</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_main_activityg" translatable="false">MainActivityg</string>
    <string name="title_home">Horario</string>
    <string name="title_tratamientos">Tratamientos</string>
    <string name="title_medicamentos">Medicamentos</string>
    <string name="title_directorio">Directorio</string>
    <string name="title_citas">Citas</string>
    <string name="anadir">Añadir</string>
    <string name="fragmentoHoy" translatable="false">FragmentoHoy</string>
    <string name="fragmentoTratamientos" translatable="false">FragmentoTratamientos</string>
    <string name="fragmentoMedicamentos" translatable="false">FragmentoMedicamentos</string>
    <string name="fragmentoDirectorio" translatable="false">FragmentoDirectorio</string>
    <string name="fragmentoCitas" translatable="false">FragmentoCitas</string>
    <string name="AnadirMedicamento">Añadir medicamento nuevo</string>
    <string name="NombreComercial">Nombre comercial</string>
    <string name="NombreGenerico">Nombre genérico</string>
    <string name="Dosis">Dosis/Presentación</string>
    <string name="IconoMedicamento">Icono</string>
    <string name="ColorIconoMedicamento">Color Icono:</string>
    <string name="FormaFarmaceutica">Forma farmacéutica</string>
    <string name="Farmacias">Farmacias</string>
    <string name="Establecimientos">Establecimientos</string>
    <string name="Medicos">Médicos</string>
    <string name="SeleccionAnadir">Anadir nuevo:</string>
    <string name="anadirMedico">Añadir médico:</string>
    <string name="tituloMedico">Título:</string>
    <string name="nombreMedico">Nombre</string>
    <string name="especialidad">Especialidad:</string>
    <string name="direccion1">Dirección 1</string>
    <string name="direccion2">Direccion 2</string>
    <string name="telefono">Teléfono</string>
    <string name="celular">Celular</string>
    <string name="email">Email</string>
    <string name="colorDistintivo">Color distintivo</string>
    <string name="icono">Icono</string>
    <string name="anadirFarmacia">Añadir farmacia</string>
    <string name="anadirTratamiento">Nuevo tratamiento</string>
    <string name="anadirCita">Nueva cita médica</string>
    <string name="tituloCita">Título/Motivo de la cita</string>
    <string name="medicoCita">Médico </string>
    <string name="ubicacionCita">Ubicación</string>
    <string name="fechaHoraCita">Fecha y hora de la cita:</string>
    <string name="nombreFarmacia">Nombre farmacia</string>
    <string name="direccionFarmacia">Dirección</string>
    <string name="telefono1Farmacia">Teléfono 1</string>
    <string name="telefono2Farmacia">Teléfono 2</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="tipo_medicamento">Tipo medicamento:</string>
    <string name="buscar">Buscar</string>
    <string name="detalles_farmacia">Detalles farmacia</string>
    <string name="editar">Editar</string>
    <string name="filtrar">Filtrar</string>
    <string name="detalles_medicamento">Detalles de medicamento</string>
    <string name="notas">Notas</string>
    <string name="fotografia">Fotografía:</string>
    <string name="detalles_cita_medica">Detalles de cita médica</string>
    <string name="sitio_web">Sitio web</string>
    <string name="detalles_de_medico">Detalles del Médico</string>
    <string name="tipo_de_recordatorio">Tipo de recordatorio:</string>
    <string name="notificaci_n">Notificación</string>
    <string name="alarma">Alarma</string>
    <string name="t_tulo">Título</string>
    <string name="esteblecer_como_acceso_rapido">Esteblecer como acceso rapido</string>
    <string name="a_adir_otra_ficha_de_contacto">Añadir otra ficha de contacto</string>
    <string name="eliminar">Eliminar</string>
    <string name="remover">Remover</string>
    <string name="fichas_de_contacto">Fichas de contacto:</string>
    <string name="tomato" translatable="false">Tomato</string>
    <string name="tangerine" translatable="false">Tangerine</string>
    <string name="banana" translatable="false">Banana</string>
    <string name="basil" translatable="false">Basil</string>
    <string name="sage" translatable="false">Sage</string>
    <string name="peacock" translatable="false">Peacock</string>
    <string name="blueberry" translatable="false">Blueberry</string>
    <string name="lavender" translatable="false">Lavender</string>
    <string name="grape" translatable="false">Grape</string>
    <string name="flamingo" translatable="false">Flamingo</string>
    <string name="graphite" translatable="false">Graphite</string>
    <string name="default_color">Default color</string>
    <string name="title_activity_maps">Añadir ubicación</string>
    <string name="nota_o_indicaciones_adicionales">Nota o indicaciones adicionales</string>
    <string name="nota_o_indicaciones_especiales_para_este_medicamento">Nota o indicaciones especiales para este medicamento</string>
    <string name="elegir_ubicacion_en_el_mapa">Elegir ubicación en el mapa</string>
    <string name="seleccionar_esta_ubicaci_n">Seleccionar esta ubicación</string>
    <string name="titulo_tratamiento">Titulo tratamiento</string>
    <string name="medicamento">Medicamento:</string>
    <string name="continuidad">Continuidad:</string>
    <string name="tipo_de_recodatorio">Tipo de recodatorio:</string>
    <string name="fecha_de_inicio">Fecha de inicio:</string>
    <string name="c_mo_desea_registrar_sus_tomas">¿Cómo desea registrar sus tomas?</string>
    <string name="por_cada_x_horas">Cada X horas</string>
    <string name="por_x_veces_al_d_a">X veces al día</string>
    <string name="incluir_horario_de_sue_o">¿Excluir horario de sueño?</string>
    <string name="hora_de_dormir">Hora de dormir:</string>
    <string name="hora_de_despertar">Hora de despertar:</string>
    <string name="hora_de_la_primera_toma">Hora de la primera toma:</string>
    <string name="programar_tomas">Programar tomas:</string>
    <string name="registrar_usuario">Registrar usuario</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="edad">Edad</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="genero">Genero:</string>
    <string name="usar_contrase_a">¿Usar contraseña?</string>
    <string name="contrase_a">Contraseña</string>
    <string name="mi_perfil">Mi perfil</string>
    <string name="configuraci_n">Configuración</string>
    <string name="cambiar_usuario">Cambiar usuario</string>
    <string name="usuarios_registrados">Usuarios registrados</string>
    <string name="email_de_recuperaci_n">Email de recuperación:</string>
    <string name="Entendido">Entendido</string>
    <string name="Porque_usar_contrasena">¿Para que se usa la contraseña?</string>
    <string name="explicacion_contrasena">Al usar una contraseña esta será solicitada para cambiar de perfil.  Debe especificar un correo electrónico al cual se enviará la contraseña en caso de que esta sea olvidada.</string>
    <string name="edad_necesaria">Es necesario especificar la edad del usuario</string>
    <string name="nombre_apellido_necesario">Es necesario especificar el nombre, apellidos y edad para poder registrar un usuario nuevo</string>
    <string name="contrasena_necesaria">Es necesario especificar una contraseña y un email de recuperación</string>
    <string name="error_crear_usuario">Ocurrió un problema durante la creación del usuario, intente de nuevo</string>
    <string name="usuario_creado_correctamente">Usuario registrado correctamente</string>
    <string name="detalle_usuario">Detalles del usuario</string>
    <string name="elegir_imagen_perfil_desde">Elegir imagen de perfil desde:</string>
    <string name="registros">Registros:</string>
    <string name="estadisticas">Estadisticas:</string>
    <string name="error_crear_establecimiento">Ocurrió un problema durante la creación del nuevo establecimiento, intente de nuevo</string>
    <string name="establecimiento_creado_correctamente">Establecimiento registrado correctamente</string>
    <string name="nombre_establecimiento">Nombre Establecimiento</string>
    <string name="anadir_establecimiento">Añadir establecimiento</string>
    <string name="a_adir_ubicaci_n_en_mapa">Añadir ubicación en Mapa</string>
    <string name="eliminar_ubicacion">Eliminar ubicación</string>
    <string name="no_se_pudo_cargar_usuario">No se pudo cargar el usuario</string>
    <string name="detalles_establecimiento">Detalles del establecimiento</string>
    <string name="establecimiento_eliminado_correctamente">Establecimiento eliminado correctamente</string>
    <string name="no_es_posible_eliminar_establecimiento">No es posible eliminar el establecimiento</string>
    <string name="eliminar_establecimiento">Eliminar establecimiento</string>
    <string name="esta_seguro_que_desea_eliminar_el_establecimiento">¿Está seguro de que desea eliminar el establecimiento?</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="ocurrio_un_problema_nuevo_doctor">Ocurrió un problema durante la creación del nuevo Doctor</string>
    <string name="doctor_registrado_correctamente">Doctor registrado correctamente</string>
    <string name="medicamento_registrado_correctamente">Medicamento registrado correctamente</string>
    <string name="ocurrio_un_problema_crear_medicamento">Ocurrió un problema durante la creación del nuevo medicamento</string>
    <string name="medicamento_eliminado_correctamente">Medicamento eliminado correctamente</string>
    <string name="no_es_posible_eliminar_medicamento">No es posible eliminar el medicamento</string>
    <string name="eliminar_medicamento">Eliminar medicamento</string>
    <string name="esta_seguro_que_desea_eliminar_el_medicamento">¿Está seguro que desea eliminar el establecimiento?</string>
    <string name="medico_eliminado_correctamente">Médico eliminado correctamente</string>
    <string name="no_es_posible_eliminar_medico">No es posible eliminar al médico</string>
    <string name="eliminar_medico">Eliminar médico</string>
    <string name="esta_seguro_que_desea_eliminar_al_medico">¿Está seguro que desea eliminar a este médico?</string>
    <string name="toca_para_cambiar_el_color">Toca para cambiar el color</string>
    <string name="anadir_ficha_de_contacto">Añadir ficha de contacto</string>
    <string name="es_necesario_especificar_el_titulo_y_otro_campo">Es necesario especificar el título y al menos otro dato de contacto</string>
    <string name="editar_ficha_contacto">Editar ficha de contacto</string>
    <string name="fecha">Fecha</string>
    <string name="hora">Hora</string>
    <string name="especialidadCita">Especialidad</string>
    <string name="ninguno">Ninguno</string>
    <string name="ocurrio_un_problema_durante_la_creacion_cita">Ocurrió un problema durante la creación de la nueva cita médica</string>
    <string name="cita_registrada_correctamente">Cita registrada correctamente</string>
    <string name="usuario_eliminado_correctamente">Usuario eliminado correctamente</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="mensaje_bienvenida">Antes de comenzar a utilizar la aplicación es necesario registrar al primer usuario, con el cual podrá añadir tratamientos, medicamentos, médicos y registrar citas médicas. Podrá registrar usuarios adicionales posteriormente con elementos independientes.</string>
    <string name="comenzar">Comenzar</string>
    <string name="recordatorio_predeterminado_citas">Recordatorio predeterminado para las citas</string>
    <string name="recordatorio_predeterminado_tratamientos">Recordatorio predeterminado para tratamientos</string>
    <string name="sin_anticipacion">Sin anticipación</string>
</resources>