<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">
    <FrameLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/textInputLayoutTituloficha"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/rounded_border_edittext"
                android:hint="@string/t_tulo"
                android:inputType="text"
                android:minHeight="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView12"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/textInputLayoutDireccion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:background="@color/rounded_border_edittext"
                android:hint="@string/direccionFarmacia"
                android:inputType="text"
                android:minHeight="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/imageView12"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutTituloficha" />


            <EditText
                android:id="@+id/textInputLayoutTelefono"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:background="@color/rounded_border_edittext"
                android:hint="@string/telefono"
                android:inputType="phone"
                android:minHeight="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView16"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutDireccion" />


            <EditText
                android:id="@+id/textInputLayoutCelular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:background="@color/rounded_border_edittext"
                android:hint="@string/celular"
                android:inputType="phone"
                android:minHeight="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView13"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutTelefono" />


            <EditText
                android:id="@+id/textInputLayoutEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:background="@color/rounded_border_edittext"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:minHeight="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView14"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutCelular" />

            <EditText
                android:id="@+id/textInputLayoutWebSite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:background="@color/rounded_border_edittext"
                android:hint="@string/sitio_web"
                android:inputType="textWebEditText"
                android:minHeight="40dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView14"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmail" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".5" />

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginStart="16dp"

                android:tint="@color/colorPrimary"

                app:layout_constraintBottom_toBottomOf="@+id/textInputLayoutDireccion"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textInputLayoutDireccion"
                app:srcCompat="@drawable/ic_hospital" />

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:tint="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/textInputLayoutCelular"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textInputLayoutCelular"
                app:srcCompat="@drawable/ic_smartphone" />

            <ImageView
                android:id="@+id/imageView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:tint="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/textInputLayoutEmail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textInputLayoutEmail"
                app:srcCompat="@drawable/ic_email" />

            <ImageView
                android:id="@+id/imageView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:tint="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/textInputLayoutTelefono"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textInputLayoutTelefono"
                app:srcCompat="@drawable/ic_phone_black_24dp" />

            <ImageView
                android:id="@+id/imageView28"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_web"
                android:tint="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/textInputLayoutWebSite"
                app:layout_constraintEnd_toStartOf="@+id/textInputLayoutWebSite"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textInputLayoutWebSite" />

            <ImageView
                android:id="@+id/imageView29"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_tag_title"
                android:tint="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/textInputLayoutTituloficha"
                app:layout_constraintEnd_toStartOf="@+id/textInputLayoutTituloficha"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textInputLayoutTituloficha" />


        </android.support.constraint.ConstraintLayout>


    </FrameLayout>
</ScrollView>


